src/pylint/snapshots/ruff__pylint__tests__PLC2201_misplaced_comparison_constant.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind:
    MisplacedComparisonConstant: i >= 5
  location:
    row: 20
    column: 11
  end_location:
    row: 20
    column: 17
  fix:
    location:
      row: 20
      column: 11
    end_location:
      row: 20
      column: 17
    content: i >= 5
    message: ~
  parent: ~
- kind:
    MisplacedComparisonConstant: i == 1
  location:
    row: 22
    column: 11
  end_location:
    row: 22
    column: 17
  fix:
    location:
      row: 22
      column: 11
    end_location:
      row: 22
      column: 17
    content: i == 1
    message: ~
  parent: ~
- kind:
    MisplacedComparisonConstant: dummy_return() > 3
  location:
    row: 24
    column: 11
  end_location:
    row: 24
    column: 29
  fix:
    location:
      row: 24
      column: 11
    end_location:
      row: 24
      column: 29
    content: dummy_return() > 3
    message: ~
  parent: ~
- kind:
    MisplacedComparisonConstant: instance.dummy_return() != 4
  location:
    row: 26
    column: 11
  end_location:
    row: 26
    column: 39
  fix:
    location:
      row: 26
      column: 11
    end_location:
      row: 26
      column: 39
    content: instance.dummy_return() != 4
    message: ~
  parent: ~
- kind:
    MisplacedComparisonConstant: instance.attr == 1
  location:
    row: 28
    column: 11
  end_location:
    row: 28
    column: 29
  fix:
    location:
      row: 28
      column: 11
    end_location:
      row: 28
      column: 29
    content: instance.attr == 1
    message: ~
  parent: ~
- kind:
    MisplacedComparisonConstant: "instance.attr == 'aaa'"
  location:
    row: 30
    column: 11
  end_location:
    row: 30
    column: 33
  fix:
    location:
      row: 30
      column: 11
    end_location:
      row: 30
      column: 33
    content: "instance.attr == 'aaa'"
    message: ~
  parent: ~

