src/pylint/snapshots/ruff__pylint__tests__PLC3002_unnecessary_direct_lambda_call.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind:
    UnnecessaryDirectLambdaCall: ~
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 33
  fix: ~
  parent: ~
- kind:
    UnnecessaryDirectLambdaCall: ~
  location:
    row: 5
    column: 8
  end_location:
    row: 5
    column: 27
  fix: ~
  parent: ~
- kind:
    UnnecessaryDirectLambdaCall: ~
  location:
    row: 5
    column: 29
  end_location:
    row: 5
    column: 47
  fix: ~
  parent: ~

