src/pylint/snapshots/ruff__pylint__tests__PLE1142_await_outside_async.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind:
    AwaitOutsideAsync: ~
  location:
    row: 12
    column: 10
  end_location:
    row: 12
    column: 24
  fix: ~
  parent: ~
- kind:
    AwaitOutsideAsync: ~
  location:
    row: 25
    column: 8
  end_location:
    row: 25
    column: 30
  fix: ~
  parent: ~

