src/pylint/snapshots/ruff__pylint__tests__PLR0206_property_with_parameters.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind: PropertyWithParameters
  location:
    row: 7
    column: 4
  end_location:
    row: 10
    column: 4
  fix: ~
- kind: PropertyWithParameters
  location:
    row: 11
    column: 4
  end_location:
    row: 14
    column: 4
  fix: ~
- kind: PropertyWithParameters
  location:
    row: 15
    column: 4
  end_location:
    row: 19
    column: 0
  fix: ~

