src/pylint/snapshots/ruff__pylint__tests__PLR0402_import_aliasing.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind:
    ConsiderUsingFromImport:
      - path
      - path
  location:
    row: 9
    column: 7
  end_location:
    row: 9
    column: 22
  fix: ~
- kind:
    ConsiderUsingFromImport:
      - foobar
      - foobar
  location:
    row: 11
    column: 7
  end_location:
    row: 11
    column: 31
  fix: ~

