src/pylint/snapshots/ruff__pylint__tests__PLR1701_consider_merging_isinstance.py.snap
---
source: src/pylint/mod.rs
expression: checks
---
- kind:
    ConsiderMergingIsinstance:
      - "var[3]"
      - - float
        - int
  location:
    row: 15
    column: 31
  end_location:
    row: 15
    column: 96
  fix: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[4]"
      - - float
        - int
  location:
    row: 17
    column: 37
  end_location:
    row: 17
    column: 103
  fix: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[5]"
      - - float
        - int
  location:
    row: 19
    column: 37
  end_location:
    row: 19
    column: 73
  fix: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[10]"
      - - list
        - str
  location:
    row: 23
    column: 38
  end_location:
    row: 23
    column: 158
  fix: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[11]"
      - - float
        - int
  location:
    row: 24
    column: 38
  end_location:
    row: 24
    column: 95
  fix: ~
- kind:
    ConsiderMergingIsinstance:
      - "var[12]"
      - - float
        - int
        - list
  location:
    row: 30
    column: 47
  end_location:
    row: 30
    column: 75
  fix: ~

